@@ -8,6 +8,7 @@ plugins {
 group = 'io.limeup'
 version = '0.0.1'
 
+
 tasks.withType(JavaCompile).configureEach {
 	options.compilerArgs += "--enable-preview"
 }
@@ -99,6 +100,9 @@ jacocoTestReport {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+tasks.named('bootRun') {
+	jvmArgs += '--enable-preview'
 }
 
 jar {
